--- a/_config.yml
+++ b/_config.yml
@@ -9,40 +9,43 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Berlin
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Eric Elbing # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: PhD student in mobile robotics at HTWK Leipzig (Germany), Mechanical Engineer (M.Eng.) # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Personal website of Eric Elbing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://ric.engineering"
 
 github:
   username: github_username # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
+orcid:
+  username: ID
+
+linkedin:
+  username: eric-elbing
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Eric Elbing
+  email: e@ric.engineering # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    # - https://twitter.com/username # change to your Twitter homepage
+    - https://github.com/ericelbing # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/eric-elbing
 
 # Site Verification Settings
 webmaster_verifications:
@@ -98,7 +101,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/images/profile.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -213,7 +216,7 @@ exclude:
   - README.md
   - LICENSE
   - purgecss.js
-  - "*.config.js"
+  - rollup.config.js
   - "package*.json"
 
 jekyll-archives:
@@ -224,3 +227,17 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+plugins:
+- jekyll-scholar   # https://github.com/inukshuk/jekyll-scholar
+- jekyll-mentions   # https://github.com/jekyll/jekyll-mentions
+- jekyll-gist   # https://github.com/jekyll/jekyll-gist
+- jekyll_github_sample   # https://github.com/bwillis/jekyll-github-sample
+- jekyll-target-blank   # https://github.com/keithmifsud/jekyll-target-blank
+- jekyll-redirect-from   # https://github.com/jekyll/jekyll-redirect-from
+
+whitelist:
+- jekyll-redirect-from
+
+scholar:
+  style: apa
