--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: Europe/Berlin
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Eric Elbing # the main title
+title: Eric Plaß # the main title
 
 tagline: PhD student in mobile robotics at HTWK Leipzig (Germany), Mechanical Engineer (M.Eng.) # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Personal website of Eric Elbing.
+  Personal website of Eric Plaß (formerly Eric Elbing).
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -32,20 +32,20 @@ orcid:
   username: 0009-0005-9967-4500
 
 linkedin:
-  username: eric-elbing
+  username: eric-plass
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Eric Elbing
+  name: Eric Plaß (born Eric Elbing)
   email: e@ric.engineering # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/ericelbing # change to your GitHub homepage
+    - https://github.com/erelbng # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - https://www.linkedin.com/in/eric-elbing
+    - https://www.linkedin.com/in/eric-plass
 
 # Site Verification Settings
 webmaster_verifications:
