--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Eric Plaß # the main title
 tagline: PhD student in mobile robotics at HTWK Leipzig (Germany), Mechanical Engineer (M.Eng.) # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Personal website of Eric Plaß (formerly Eric Elbing).
+  Personal website of Eric Plaß (formerly Eric Elbing ).
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -37,7 +37,7 @@ linkedin:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Eric Plaß (born Eric Elbing)
+  name: Eric Plaß
   email: e@ric.engineering # change to your email address
   links:
     # The first element serves as the copyright owner's link
